Fix list group item color on dark mode

--- a/wordpress/wp-content/themes/knock-knock/assets/scss/_list-group.scss
+++ b/wordpress/wp-content/themes/knock-knock/assets/scss/_list-group.scss
@@ -1,5 +1,6 @@
 .list-group {
   .list-group-item {
+    color: var(--body-color);
     padding: 0.75em 0 0;
 
     &:not(:last-child) {
